# search-agent

./: .env.example  .gitignore  README.md  config.toml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_e1_episodic.py  0002_e2_semantic.py  0003_e3_edges.py  0004_e4_feedback.py  0005_e5_observability.py
docs/: fase-0.md  guia-estudo-embeddings-grafos.md  plano-implementacao.md  rfc-memory-layer.md  search-project.md
docs/articles/: 2606.29073-en.md  2606.29073-ptbr.md  _TEMPLATE.md
docs/articles/mcp/: 2606.29073-en.md  2606.29073-ptbr.md  2606.30317-en.md  2606.30317-ptbr.md
docs/articles/multiagent/: 2607.01600-en.md  2607.01600-ptbr.md
docs/prompts/: prompt.md
src/search_agent/: __init__.py  cli.py  config.py  embeddings.py  llm.py  logging_setup.py  rag.py
src/search_agent/db/: __init__.py  models.py  queries.py  session.py
src/search_agent/eval/: __init__.py  ablation.py  metrics.py
src/search_agent/memory/: __init__.py  consolidate.py  graph.py  identity.py  read_path.py  reflect.py  write_path.py
src/search_agent/observability/: __init__.py  diff.py  events.py
src/search_agent/sources/: __init__.py  arxiv.py  base.py
tests/: conftest.py  test_arxiv.py  test_eval.py  test_graph.py  test_identity.py  test_observability.py  test_rag.py  test_reflect_consolidate.py  test_write_read.py
