[project]
name = "search-agent"
version = "0.0.0"
description = "Camada de memória para um agente de pesquisa (search-agent) — Pattern B, write/read path explícitos."
readme = "docs/search-project.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "feedparser>=6.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]

[project.scripts]
agent = "search_agent.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/search_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "testcontainers>=4.0",
]
